--- a/languages/speak/english/EnglishInUse_adv/Idioms/5.md
+++ b/languages/speak/english/EnglishInUse_adv/Idioms/5.md
@@ -4,7 +4,7 @@
 **Meaning:** A small, visible part of a much larger problem.  
 **Example:** *"The recent layoffs are just the tip of the iceberg—the company is facing major financial troubles."*  
 
-❌ **Incorrec
+❌ **Incorrect
 ---
 
 ### **2. From the cradle to the grave**  
