--- a/architecture/CPU/articles/modernmicroprocessors/1.md
+++ b/architecture/CPU/articles/modernmicroprocessors/1.md
@@ -76,9 +76,90 @@ Performance = IPC (Instructions Per Cycle) × Frequency
 **The key thought:**  
 *"Megahertz sells processors, but architecture wins."*
 
+Consider how an instruction is executed – first it is fetched, then decoded, then executed by the appropriate functional unit, and finally the result is written into place. With this scheme, a simple processor might take 4 cycles per instruction (CPI = 4)...
 ![alt text](../modernmicroprocessors/images/2.png)
+Modern processors overlap these stages in a pipeline, like an assembly line. While one instruction is executing, the next instruction is being decoded, and the one after that is being fetched...
 
 ![alt text](../modernmicroprocessors/images/3.png)
+Now the processor is completing 1 instruction every cycle (CPI = 1). This is a four-fold speedup without changing the clock speed at all
+
+### **How Pipelining Achieves 1 Instruction Per Cycle (CPI = 1)**  
+
+Modern processors achieve a **4x speedup** without increasing clock speed by using **instruction pipelining**—a technique that overlaps the execution of multiple instructions, similar to an assembly line.  
+
+---
+
+### **Pipeline Hardware Implementation**  
+
+#### **1. Pipeline Stages & Clock Synchronization**  
+Each pipeline stage consists of:  
+- **Combinational Logic** (performs the actual computation).  
+- **Pipeline Registers (Latches)** that hold intermediate results between stages.  
+
+**How it works:**  
+1. A **global clock signal** synchronizes all pipeline latches.  
+2. At each clock cycle:  
+   - The **input latch** releases its data to the combinational logic.  
+   - The logic processes the data **within one clock cycle**.  
+   - The result is **captured by the next latch** at the next clock edge.  
+
+➔ This creates a smooth flow where **instructions "move" through the pipeline** like cars on an assembly line.  
+
+---
+
+#### **2. Data Flow in a Pipeline**  
+- At the **start of a clock cycle**:  
+  - The **current instruction’s state** is stored in a pipeline latch.  
+  - This data becomes the **input for the next stage’s logic**.  
+- During the **clock cycle**:  
+  - Signals propagate through combinational logic (e.g., ALU, decoders).  
+  - By the **end of the cycle**, the result is ready for the next latch.  
+
+**Key Constraint:**  
+- The **slowest stage** determines the **maximum clock speed** (critical path).  
+- If logic takes too long, the clock must slow down (or the pipeline must be redesigned).  
+
+---
+
+### **Visualizing the Pipeline**  
+
+#### **Without Pipelining (CPI = 4)**  
+```
+|----|----|----|----|  
+| IF | ID | EX | WB |  (Instruction 1)  
+     | IF | ID | EX | WB |  (Instruction 2)  
+          | IF | ID | EX | WB |  (Instruction 3)  
+```  
+➔ **4 cycles per instruction (CPI = 4).**  
+
+#### **With Pipelining (CPI = 1 in Ideal Case)**  
+```
+| IF | ID | EX | WB |  
+     | IF | ID | EX | WB |  
+          | IF | ID | EX | WB |  
+               | IF | ID | EX | WB |  
+```  
+➔ **1 instruction completes per cycle (CPI = 1).**  
+
+---
+
+### **Why This Matters**  
+- **Same clock speed, 4x throughput** (in theory).  
+- Real-world CPUs use **deeper pipelines** (10+ stages) and **superscalar execution** (multiple instructions per cycle).  
+- **Bottlenecks:** Hazards (data/control dependencies) can stall the pipeline.  
+
+**Modern Example:**  
+- **Intel’s Sunny Cove (Ice Lake):** ~14-stage pipeline.  
+- **Apple M1/M2:** 8-wide decode, 600+ instructions in flight.  
+
+---
+
+### **Key Takeaways**  
+✔ **Pipelining enables CPI = 1** by overlapping instruction execution.  
+✔ **Clock synchronizes movement** between stages via latches.  
+✔ **Combinational logic must finish within 1 cycle** (or the clock slows down).  
+✔ **Modern CPUs go beyond simple pipelining** with OoO execution, superscalar designs, and speculative execution.  
+
 
 ![alt text](../modernmicroprocessors/images/4.png)
 
