--- a/languages/speak/english/EnglishInUse_adv/grammar/16.md
+++ b/languages/speak/english/EnglishInUse_adv/grammar/16.md
@@ -94,3 +94,17 @@
 | **Would have + participle** | Unreal past situations, hypothetical scenarios.                             | I *would have been* happy to see him.    |
 | **Will have + participle**  | Logical assumption about a past event.                                      | Few people *will have seen* the eclipse. |
 
+
+
+**Table: Will, Would, Used To - Rules and Examples**
+
+| English Construction        | Use                                                                                                          | English Example                                        | Keywords/Clues                                                                                      |
+| --------------------------- | ------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------ | --------------------------------------------------------------------------------------------------- |
+| **Will (Present)**          | Habitual actions in the present, general truths, logical deductions.                                         | Every morning, the sun *will* rise.                    | Every morning, always, usually, often, now, of course, probably                                     |
+| **Would (Past)**            | Habitual actions in the past (context required!), typical behavior in the past.                              | When I was a child, I *would* read a lot of books.     | When I was a child, in those days, in the past, used to, often, always (when referring to the past) |
+| **Used To**                 | Repeated actions in the past (without requiring immediate context!), states in the past (that have changed). | I *used to* live in London.                            | Formerly, used to be, before, at one time, no longer                                                |
+| **Will not (Won't)**        | Refusal in the present, negation of a habit in the present (expressing annoyance).                           | He *won't* listen to my advice!                        | Never, refuses, won't (expressing annoyance/frustration)                                            |
+| **Would not (Wouldn't)**    | Refusal in the past, negation of a habit in the past.                                                        | She *wouldn't* eat vegetables when she was a child.    | Refused, wouldn't (past)                                                                            |
+| **Would have + participle** | Unreal past situations (regret, missed opportunities).                                                       | I *would have gone* to the party, but I was too tired. | But, if only, sadly, unfortunately, too bad                                                         |
+| **Will have + participle**  | Logical assumption about an event in the past (based on current evidence).                                   | She *will have finished* her work by now.              | By now, probably, I bet, I'm sure, must be, likely                                                  |
+
