--- a/languages/speak/english/EnglishInUse_adv/grammar/18.md
+++ b/languages/speak/english/EnglishInUse_adv/grammar/18.md
@@ -1,1 +1,188 @@
-#
+## **1. Must – Formal rules, prohibitions, and suggestions**  
+
+## 1.1. Strict rules and warnings**  
+**"Must"** is used in **official instructions, laws, and important warnings**.  
+
+📌 **Examples:**
+- **"Bookings must be made at least seven days before departure."**
+*(Reservations must be made no later than seven days before departure.)*  
+  → This is an airline's ** rule**, not just advice.  
+
+- **"All employees must wear safety helmets on the construction site."**  
+  *(All employees are required to wear hard hats on the construction site.)*  
+  → **Violating this rule may result in a fine or dismissal.**  
+
+⚠️ **The pitfall:**  
+If you tell a friend:
+❌ *"You must come to my party!"*  
+→ This will sound like an order, not an invitation.  
+ Better: *"You should come to my party!"* or *"I'd love you to come!"*  
+
+---
+
+### **🚫 1.2. Prohibitions (Must Not / Mustn't)**  
+**"Must not"** (or **"mustn't"**) means **strict prohibition**.  
+
+📌 **Examples:**  
+- **"Passengers must not smoke in the airport."**  
+  *(Passengers are not allowed to smoke at the airport.)*  
+  → This is an **official ban**, violation of which may result in a fine.  
+
+- **"You mustn’t tell anyone about this secret!"**
+*(You must not tell anyone about this secret!)*  
+  → **Very strict warning.**  
+
+⚠️ **The pitfall:**  
+In colloquial speech **"mustn't"** sounds **too harsh**.  
+❌ *"You mustn't eat my chocolate!"* (Sounds like a threat.)  
+✅ Better: *"Please don't eat my chocolate!"*  
+
+---
+
+### **☕ 1.3. Offers without precise plans**  
+In **colloquial speech** "must" can be used for **suggestions to meet or do something**, but without specifics.  
+
+📌 **Examples:**  
+- **"We must get together more often!"**  
+  * (We need to meet more often!)*  
+  → **There is no exact date, just an idea.**  
+
+- **"We must have coffee sometime!"**  
+  * (I need to have coffee sometime!)*  
+  → **Does not mean that it will happen tomorrow.**  
+
+⚠️ **The pitfall:**  
+If you add **"must"** to a specific plan, it will sound strange:
+**"We must meet at 5 PM tomorrow."*  
+✅ Better: *"Let’s meet at 5 PM tomorrow."*  
+
+---
+
+### **📝 1.4. Self-reminders (I must...)**  
+When we ** remind ourselves** to do something, we use ** "I must..."**.  
+
+📌 **Examples:**  
+- **"I must call my mom today."**  
+  * (I have to call my mom today.)*  
+  → **A reminder to myself.**  
+
+- **"I must finish this report by Friday."**
+*(I have to finish the report by Friday.)*  
+  → **An important task that cannot be forgotten.**  
+
+⚠️ **The pitfall:**  
+If you tell someone else:
+❌ *"You must call your mom!"*  
+→ It sounds like a **order**.  
+ Better: *"You should call your mom."*  
+
+---
+
+## **2. Logical conclusions with a "Must"**  
+
+## 2.1. Conclusions about the past (Must + Have + Past Participant)**  
+When we are ** sure that something happened in the past**, we use this construction.  
+
+📌 **Examples:**  
+- **"She’s not answering her phone. She must have gone to bed."**  
+  * (She doesn't answer the phone. She must have gone to bed.)*  
+  → **Logical conclusion based on facts.**  
+
+- **"The wallet isn’t here. I must have left it at the café."**
+*(No wallet. I probably left it in the cafe.)*  
+
+⚠️ **The pitfall:**  
+This is ** not a 100% certainty**, but an assumption.  
+❌ *"He must have stolen the money!"* (Without evidence, this is an accusation.)  
+✅ Better: *"He might have taken it by mistake."*  
+
+---
+
+### **⏳ 2.2. Conclusions about the present (Must Be + -ing)**  
+When we ** guess what's going on right now**.  
+
+📌 **Examples:**  
+- **"She’s not at her desk. She must be having lunch."**  
+  * (She's not at her desk. She must be having lunch.)*  
+
+- **"The lights are off. They must be sleeping."**  
+  *(The light is off. They're probably asleep.)*  
+
+⚠️ **The pitfall:**  
+Not to be confused with **"should be"** (should, but not fact):
+❌ *"He must be at work now."* (If you are not sure.)  
+✅ Better: *"He should be at work now."*  
+
+---
+
+### **🚧 2.3. Conclusions about the future (Must Be Going To / Must Be + -ing)**  
+When we ** assume what will happen in the future**.  
+
+📌 **Examples:**  
+- **"Look at those dark clouds! It must be going to rain."**  
+  *(Look at those clouds! It's going to rain now.)*  
+
+- **"She’s studying hard. She must be going to pass the exam."**  
+  *(She studies hard. She must pass the exam.)*  
+
+⚠️ **The pitfall:**  
+Not to be confused with **"will"** (100% certainty):
+❌ *"The sun must rise tomorrow."* (This is a law of nature, there is no need for "must".)
+✅ Correct: *"The sun will rise tomorrow."*  
+
+---
+
+## **3. Have To / Have Got To – Duties and Necessity**  
+
+### **📅 3.1. Daily duties (Have To)**  
+**"Have to"** is used when **an obligation comes from outside** (rules, work, circumstances).  
+
+📌 **Examples:**  
+- **"I have to wake up at 6 AM for work."**
+*(I have to get up at 6 a.m. for work.)*  
+  → **Not because I want to, but because the schedule requires it.**  
+
+- **"You have to show your ID to enter the club."**  
+  *(You need to show your ID to enter the club.)*  
+
+⚠️ **The pitfall:**  
+The questions **"Do I have to...?"** often sound **unwillingness to do something**:
+- *"Do I have to clean my room now?"*  
+  *(Do I have to clean up right now?)* → ** A hint that you don't want to do this.**  
+
+---
+
+### **🗣️ 3.2. Colloquial form (Have Got To)**  
+**"Have got to"** is a more **informal** option.  
+
+📌 **Examples:**
+- **"I've got to go now, my train is leaving!"**
+*(I have to go, my train is leaving!)*  
+
+- **"She’s got to finish this project today."**  
+  (She needs to finish the project today.)*  
+
+⚠️ **The pitfall:**  
+❌ **Cannot be used with other modal verbs:**  
+- *"You will have got to wait."*→**Wrong!**  
+✅ Right: *"You will have to wait."*  
+
+---
+
+## **4. The Difference between Must and Have To**  
+
+| **Must**                     | **Have To**                     |
+| ---------------------------- | ------------------------------- |
+| **Personal duty / order**    | **External necessity**          |
+| *"You must obey the law."*   | *"I have to pay taxes."*        |
+| **More formally**            | **More neutral**                |
+| *"Students must not cheat."* | *"You have to wear a uniform."* |
+
+---
+
+## **Result**  
+✔ **Must** – **strict rules, prohibitions, personal obligations.**  
+✔ **Have to** – **daily responsibilities (work, laws, circumstances).**  
+✔ **Have got to** – **colloquial version of "have to".**  
+✔ **Must + have + V3** – **confident conclusions about the past.**  
+✔ **Must be + -ing** – **assumptions about the present/future.**  
